# pkb

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
src/pkb/: __init__.py  db.py  ingest.py  rag.py
tests/: test_db.py
